--- a/index.html
+++ b/index.html
@@ -4,10 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rock Paper Scissors</title>
-    <link
-      rel="stylesheet"
-      href="https://pyscript.net/releases/2024.1.1/core.css"
-    />
+    <link rel="stylesheet" href="https://pyscript.net/releases/2025.3.1/core.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Fira+Sans&display=swap" rel="stylesheet">
@@ -24,10 +21,7 @@
     <button py-click="Game.scissors" class="button">Scissors</button>
 
     <div id="output" style="margin-top: 30px"></div>
-    <script
-      type="module"
-      src="https://pyscript.net/releases/2024.1.1/core.js"
-    ></script>
+    <script type="module" src="https://pyscript.net/releases/2025.3.1/core.js"></script>
     <script type="py" src="./main.py"></script>
     
   </body>
